<resources>
    <string name="app_name">MovieReview</string>
    <string name="login_title">用户登录</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login_button">登录</string>
    <string name="no_account">还没有账号？点击注册</string>
    <string name="register_title">用户注册</string>
    <string name="confirm_password_hint">请确认密码</string>
    <string name="register_button">注册</string>
    <string name="has_account">已有账号？返回登录</string>
    <string name="home_title">热门电影</string>
    <string name="profile_title">个人中心</string>
    <string name="logout_button">退出登录</string>
    <string name="movie_detail_title">电影详情</string>
    <string name="review_list_title">影评列表</string>
    <string name="about_title">关于</string>
    <string name="logout_confirm">确定要退出登录吗？</string>
    <string name="register_success">注册成功，请返回登录</string>
    <string name="password_not_match">两次密码不一致</string>
    <string name="input_empty">用户名和密码不能为空</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="login_success">登录成功</string>
</resources>